--- a/recipes/turkchil.html
+++ b/recipes/turkchil.html
@@ -6,9 +6,67 @@
 </head>
 <body>
     <h1>Instant Pot Turkey Chili</h1>
-    <img src="../img/turk.jpg" alt="A picture of a cooked piece of glazed salmon">
-    <h3>Description</h3>
-    <h3>Ingredients</h3>
-    <h3>Steps</h3>
+    <img src="../img/turk.jpg" alt="A picture of a bowl of chili, garnished with 
+    grated cheese and green onions">
+    <h2>Description</h2>
+    <p>It doesn't get easier than this! Brown some meat, then toss in the rest of the 
+        ingredients and hit start! Feel free to adjust the heat level by adding more 
+        chipotle peppers and/or adobo sauce. The cocoa powder and cinnamon are ideas 
+        I got from my favorite chili seasoning available at a local spice shop - they 
+        really transform the dish! I like to top this with sour cream, green onion and 
+        shredded smoked cheddar.</p>
+    <h2>Ingredients</h2>
+        <h4><em>Seasoning Mix</em></h4>
+        <p>
+            <ul>
+                <li>1 tablespoon chili powder</li>
+                <li>2 teaspoons smoked paprika</li>
+                <li>1 teaspoon salt</li>
+                <li>1 teaspoon oregano</li>
+                <li>1 teaspoon unsweetened cocoa powder</li>
+                <li>½ teaspoon cumin</li>
+                <li>¼ teaspoon ground cinnamon</li>
+                <li>¼ teaspoon ground coriander</li>
+                <li>¼ teaspoon black pepper</li>
+            </ul>
+        </p>
+        <h4><em>Chili</em></h4>
+        <p>    
+            <ul>
+                <li>1 tablespoon olive oil</li>
+                <li>1 pound ground turkey</li>
+                <li>1 onion, chopped</li>
+                <li>1 jalapeno pepper, seeded and minced </li>
+                <li>2 (14.5 ounce) cans fire-roasted diced tomatoes</li>
+                <li>1 (15.5 ounce) can dark red kidney beans, drained and rinsed </li>
+                <li>1 (15.5 ounce) can light red kidney beans, drained and rinsed</li>
+                <li>1 (15 ounce) can tomato sauce</li>
+                <li>1 chipotle pepper in adobo sauce, minced</li>
+                <li>2 tablespoons adobo sauce from chipotle peppers</li>
+                <li>salt to taste</li>
+            </ul>
+        </p>
+    <h2>Steps</h2>
+        <p>
+            <ol>
+                <li>Combine chili powder, smoked paprika, salt, oregano, cocoa powder, 
+                    cumin, cinnamon, coriander, and black pepper in a small bowl. 
+                    Set seasoning mix aside.</li>
+                <li>Turn on a multi-functional pressure cooker (such as Instant Pot®) 
+                    and select Saute function. Heat olive oil over high heat and brown 
+                    ground turkey until crumbly, 3 to 4 minutes. Add onion and jalapeno 
+                    and cook an additional 2 to 3 minutes. Add tomatoes, kidney beans, 
+                    tomato sauce, chipotle pepper, adobo sauce, and seasoning mix. 
+                    Mix to combine, scraping up any browned bits off the bottom of the 
+                    pot. Close and lock the lid.</li>
+                <li>Select high pressure according to manufacturer's instructions; 
+                    set timer for 20 minutes. Allow 10 to 15 minutes for pressure to 
+                    build.</li>
+                <li>Release pressure carefully using the quick-release method according 
+                    to manufacturer's instructions, about 5 minutes. Unlock and remove 
+                    the lid. Stir chili and adjust salt, if desired. Serve with your 
+                    favorite toppings.</li>
+            </ol>
+        </p>
 </body>
 </html>
