--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Odin Recipes</h1>
     <p><a href="recipes/mustsalm.html">Instant Pot Honey Mustard Salmon</a></p>
     <p><a href="recipes/turkchil.html">Instant Pot Turkey Chili</a></p>
+    <p><a href="recipes/cocoshri.html">Air Fryer Coconut Shrimp<a></p>
 </body>
 </html>
