final updates to cocoshri.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/mustsalm.html">Instant Pot Honey Mustard Salmon</a></p>
-    <p><a href="recipes/turkchil.html">Instant Pot Turkey Chili</a></p>
-    <p><a href="recipes/cocoshri.html">Air Fryer Coconut Shrimp<a></p>
+    <ul>
+        <li><a href="recipes/mustsalm.html">Instant Pot Honey Mustard Salmon</a></li>
+        <li><a href="recipes/turkchil.html">Instant Pot Turkey Chili</a></li>
+        <li><a href="recipes/cocoshri.html">Air Fryer Coconut Shrimp<a></li>
+    </ul>
 </body>
 </html>
